--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ h2 {
 }
 
 p {
+	font-size: 85%;
+	line-height: 1.5;
 	margin: 0 0 .5em 0;
 }
 small {
@@ -213,12 +215,13 @@ nav .logo img {
 #mainGallery{
 	float: left;
 	background: #FCF9FA;
-	background-image:  url(../img/css/dot-pattern-alpha1.png);
-	-webkit-background-size: .25%;
-	-moz-background-size: .25%;
-	-o-background-size: .25%;
-	background-size: .25%;		
+	background-image:  url(../img/css/img1.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;		
 	width: 100%;
+	height: 588px;
 	border-bottom: solid 1px rgba(9,35,36,.1);
 	overflow: hidden;
 	padding: 0 !important;
@@ -604,9 +607,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 #testimonials blockquote {
 	font-style: italic;
 	line-height: 1.5;
-	margin: 0 0 50px 0;
+	margin: 0 0 30px 0;
 	height: 120px;
-	font-size: 85%;
 	text-align: center;
 	display: inline-table;
 }
@@ -615,14 +617,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	display: block;
 	float: right;
 	clear: both;
-	font-size: 85%;
+	font-size: 75%;
 	font-style: normal;
 }
 
 .face {
 	border-radius: 50%;
-	margin: 0 0px 20px 0;
-	width: 55px;
+	margin: 0 0px 10px 0;
+	width: 70px;
 	border: solid 2px #FCF9FA;
 }
 
@@ -717,4 +719,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	padding-top: .2em;
 	font-style: normal;
 	font-weight: normal;
+}
+
+/*------about ---------*/
+
+#about .face {
+	width: 220px;
 }
