--- a/css/style.css
+++ b/css/style.css
@@ -699,16 +699,47 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 }
 #ourStory .face {
 	width: 70px;
-	
 	background:  rgba(9,35,36,.05);
 }
 
-/*#ourStory .julia {
-	float: left;
-	margin: 0 10px 0 0;
+/*--------OVERLAY & MODALS-----------*/
+#overlay {
+	position: absolute;
+	top: 0;
+	background: rgba(9,35,36,.2);
+	width: 100%;
+	z-index: 100000;
+	margin: 0 !important;
+	display: none;
 }
 
-#ourStory .amelia{
+#modal {
+	width: 50%;
+	position: absolute;
+	left: 50%;
+	padding: 1em;
+	margin-left: -25%;
+	z-index:  100001;
+	background: #FCF9FA;
+	box-shadow: 0 0 10px rgba(9,35,36,.5);
+	border-radius: 10px;
+}
+
+#modal .close {
+	font-family: Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-size: 75%;
+	display: inline-block;
+	text-align: center;
+	padding: .25em .5em;
+	border-radius: 5px;
+	border: solid 1px #FC9AC5;
+	position: relative;
 	float: right;
-	margin: 0 0px 0 10px;
-}*/
+	font-variant: small-caps;
+	cursor: pointer;
+}
+
+#modal .close:hover {
+	background: #FC9AC5;
+	color: #fff !important;
+}
