removed useles files, added sticky navigation, made .inner even centered

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a:hover {
 #container > section .inner {
 	margin: 0 auto;
 	width: 960px;
-	padding: 0em;
+	padding: 0em 0 0 20px;
 	clear: both;
 }
 
@@ -171,14 +171,17 @@ blockquote {
 /*--Nav---*/
 nav {
 	background: #092324;
-	padding: 0;
+	padding: 10px 0;
 	display: block;
 	width: 100%;
 	float: left;
-	position: fixed;
 	z-index: 10000;
 	font-size: 18px;
 	font-family: "Cassanet", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+}
+
+.sticky {
+	position: fixed;
 }
 
 nav a {
@@ -198,7 +201,7 @@ nav .logo {
 	height: 30px;
 	position: relative;
 	float: left;
-	margin: -5px 0 0 10px;
+	margin: -2px 0 0 10px;
 	cursor: pointer;
 }
 
@@ -213,6 +216,8 @@ nav .logo img {
 .navSocial {
 	display: block;
 	float: right;
+	position: relative;
+	top: 6px;
 }
 
 /*First Fold*/	
@@ -543,7 +548,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 /*MainGallery*/
 #mainGallery{
 	background: #EBF2F2;
-	padding: 20px 0 0 0 !important;
+	padding: 50px 0 0 0 !important;
 }
 
 #mainGallery header{
@@ -661,6 +666,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	font-style: normal;
 }
 
+.face,
 .face img {
 	border-radius: 50%;
 	margin: 0 0px 10px 0;
@@ -779,7 +785,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	height: 75px;
 	width: 75px;
 	background: url(../img/css/sprite.png) no-repeat;
-	margin: 0 0px 20px 75px;
+	margin: 0 0px 20px 113px;
 }
 
 .iconHeader {
