--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a:hover {
 #container .inner {
 	margin: 0 auto;
 	width: 960px;
-	padding: 0em 0 0 20px;
+	padding: 0em;
 	clear: both;
 }
 
@@ -559,13 +559,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	top: -20px;
 }
 
-.circle {
-	height: 220px;
+.braThumb {
 	background: #FCF9FA;
 	margin-bottom: 20px;
-	overflow: hidden;
-	border-radius: 50%;
 	box-shadow: 0 0 1px rgba(9,35,36,.3) inset;
+}
+
+.braThumb figcaption{
+	text-align: center;
+	padding: 0 0 10px 0;	
+}
+
+.braThumb small {
+	font-style: normal;
+	font-size: 80%;	
 }
 
 .middle {
