--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,8 @@ color: #FC328A;
 text-decoration: none;
 }
 a:hover {
-	background: #EEFF00;
-	color: #092324;
+	background: #092324;
+	color: #FCF9FA;
 	text-decoration: none;
 }
 
@@ -86,7 +86,7 @@ h1 {
 h2 {
 	font-family:"Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color: rgba(9,35,36,.4);
-	font-size: 115%;
+	font-size: 150%;
 	margin: .7em 0 .7em 0;
 }
 
@@ -97,7 +97,7 @@ p {
 }
 small {
 	color: rgba(9,35,36,.5);
-	font-size: 65%;
+	font-size: 75%;
 	font-style: italic;
 }
 
@@ -167,8 +167,10 @@ nav {
 	border-bottom: solid 1px rgba(9,35,36,.1);
 	float: left;
 	z-index: 10000;
-	font-size: 85%;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-size: 100%;
+	font-variant: small-caps;
+	font-weight: bold;
+	font-family: "Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
 .sticky {
@@ -176,21 +178,11 @@ nav {
 }
 
 nav a {
-	margin: 5px 0px 0 0;
+	margin: 3px 0px 0 0;
 	color:#fc328a;
 	display: inline-block;
 	text-align: center;
-	
-	font-variant: small-caps;
-
-}
-
-nav a:hover,
-nav a.highlighted {
-	background: #EEFF00;
-	color: #092324;
-	text-decoration: none;
-}
+	}
 
 nav .logo {
 	height: 30px;
@@ -260,6 +252,7 @@ nav .logo img {
 	box-shadow:  0 0 5px rgba(9,35,36,.3);
 	text-align: center;
 	background: #FCF9FA;
+	border-bottom: solid 1px rgba(9,35,36,.1);
 }
 
 #sizeTable table{
@@ -434,6 +427,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 #mainGallery{
 	background: #fcf9fa;
 	padding: 50px 0 0 0 !important;
+	border-bottom: solid 1px rgba(9,35,36,.1);
 }
 
 #mainGallery header{
@@ -509,7 +503,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 
 .square {
 	height: 220px;
-	background: #FCF9FA;
+	background: rgba(252, 249, 250, 1);
 	margin-bottom: 20px;
 	overflow: hidden;
 }
@@ -521,7 +515,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 .square .caption {
 	width: 220px;
 	height: 220px;
-	background: rgba(238, 255, 0,.6);
+	background: rgba(252, 249, 250, 0.6);
 	position: relative;
 	top: -224px;
 	display: none;
@@ -530,18 +524,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 .square .caption h2 {
 	margin: 120px 20px 0;
 	color: #092324;
-	font-size: 200%;
 }
 
 .caption p {
-	font-family: "Cassanet", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: "Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	margin: 0px 20px;
 	font-size: 100%;
+	font-weight: bold;
 }
 
 #realphotos .square:hover img {
-	-webkit-filter: brightness(160%);
-	background: #eeff00;
+	background: rgba(252, 249, 250, .6);
 }
 
 #realphotos .square:hover .caption {
@@ -550,10 +543,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 
 /*Testimonials*/	
 #testimonials {
+	border-bottom: solid 1px rgba(9,35,36,.1);
 }
 
 #testimonials blockquote {
-	font-style: italic;
+	font-style: oblique;
 	line-height: 1.5;
 	margin: 0 0 30px 0;
 	height: 120px;
@@ -591,6 +585,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 #preorder {
 	background: #fcf9fa;
 	margin: 0 0 0 0;
+	border-bottom: solid 1px rgba(9,35,36,.1);
 }
 
 #preorder header {	
@@ -605,10 +600,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	font-size: 100px;
 	color: #FCF9FA;
 	font-family: "Cassanet", "Lato", "Helvetica", sans-serif;
-}
-
-#preorder h2 {
-	color: rgba(9,35,36,.8); 
 }
 
 #preorder h3 {
@@ -710,8 +701,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 }
 /*------about ---------*/
 #about {
-	background: #ca0058;
+	border-bottom: solid 1px rgba(9,35,36,.1);
 }
+
 .center {
 	text-align: center;
 }
@@ -726,23 +718,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	padding: 20px;
 	border-radius: 10px;
 }
-#ourStory {
-	background: #fcf9fa;
-	margin: px;
-	border-radius: 10px;
-}
+
 #ourStory p {
 	padding: 0 20px 0 20px;
 }
 #ourStory h2 {
 	margin-left: 20px;
 }
-#about h1 {
-	color:  #fcf9fa;
-}
+
 #ourStory .face {
 	width: 70px;
-	background:  rgba(9,35,36,.05);
+	background: rgba(9,35,36,.1);
+	margin-left: 0;
 }
 #ourStory img {
 	margin: 20px;
@@ -751,7 +738,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 /*-----footer--------*/
 footer {
 	padding: 40px 0;
-	border-top: solid 1px rgba(9,35,36,.1);
 	color: rgba(9,35,36,.5);
 	float: left;
 	width: 100%;
