--- a/css/style.css
+++ b/css/style.css
@@ -759,18 +759,28 @@ footer .socialIcons a {
 }
 
 .socialIcons .fb {
-	background-position: 0 -225px;
+	background-position: 0 -224px;
 }
-
+.socialIcons .fb:hover {
+	background-position: -75px -224px;
+}
 .socialIcons .twitter {
-	background-position: 0 -375px;
+	background-position: 0 -374px;
+}
+.socialIcons .twitter:hover {
+	background-position: -75px -374px;
 }
 .socialIcons .pinterest {
 	background-position: 0 -450px;
-
+}
+.socialIcons .pinterest:hover {
+	background-position: -75px -450px;
 }
 .socialIcons .instagram {
-	background-position: 0 -300px;
+	background-position: 0 -299px;
+}
+.socialIcons .instagram:hover {
+	background-position: -76px -299px;
 }
 
 footer .copyright{
