--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,9 @@ small {
 blockquote {
 	color: rgba(9,35,36,.5);
 }
+button {
+	border: 0;
+}
 
 .nodisplay {
 	display: none;
@@ -496,7 +499,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 
 /*Realphotos*/
 #realphotos {
-	background: rgba(9,35,36, 0.8);
+	background: rgba(9,35,36, 1);
 	padding: 20px 0 40px 0 !important;
 }
 
@@ -634,32 +637,28 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 
 .button-huge {
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 	30px;
 	font-family: "Cassanet", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	margin: 1em 0 2em 0;
 	padding: 10px;
 	border-radius: 10px;
 	cursor: pointer;
 	color: #FFF3F8;
 	background: #fc328a;
+	margin: 40px 0px;
+
 }
 
-.button-huge:hover {background: rgb(252,50,138);
-}
-
-.button-huge div {
-	padding: .2em 1em 0.2em;
-	border: dashed 2px rgba(252, 249, 250, .6);
-	border-radius: 5%;
+.button-huge:hover {
+	background: #092324;
 }
 
 .button-huge small {
-	color: #FCA6CC;
+	color: #FFF3F8;
 	margin: 4px 0 0 0;
-	font-size: 50%;
+	font-size: 60%;
 	display: block;
-	border-top: solid 1px rgba(202,0,88,.5);
-	padding-top: .2em;
+	border-top: solid 1px rgba(202,0,88,.1);
+	padding: .2em 2em;
 	font-style: normal;
 	font-weight: normal;
 }
