new girl sprite

--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc328a', end
 	cursor: pointer;
 	color: #FFF3F8;
 	background: #fc328a;
-	margin: 40px 0px;
+	margin: 50px	;
 
 }
 
