--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,15 @@ p {
 	line-height: 1.5;
 	margin: 0 0 .5em 0;
 }
+
+ul {
+	list-style-type: square;
+}
+
+li {
+	list-style-position: inside;
+	margin: 5px 0;
+}
 small {
 	color: rgba(9,35,36,.5);
 	font-size: 75%;
@@ -245,16 +254,17 @@ nav .logo img {
 }
 
 
-/*----Sizes----*/	
+/*----Sizes----*/
+.half {
+	width: 50%;
+	float: left;
+}	
 .illustration {
 	background-image: url(../img/girl/sprite.png);
 	background-repeat: no-repeat;
-	background-color: #092324;
-	border-radius: 50%;
-	width: 242px;
-	height: 242px;
+	width: 206px;
+	height: 224px;
 	display: block;
-	z-index: 1000;
 }
 
 
@@ -263,7 +273,7 @@ nav .logo img {
 }
 
 .illustration2 {
-	background-position: -242px 0;
+	background-position: 0 -227px;
 }
 
 .illustration3 {
@@ -335,7 +345,9 @@ nav .logo img {
 	color: rgba(9,35,36,1);
 }
 
-
+.sizeCalculator {
+	display: inline-block;
+}
 .sizeCalculator label {
 	display: inline-block;
 	width: 80px;
